[tool.poetry]
name = "apitest"
version = "1.0.0"
description = "图书馆座位预订系统"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "apitest", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
pydantic = "2.6.3"
pydantic-core = "2.16.3"
pydantic-settings = "2.2.1"
loguru = "^0.7.2"
click = "^8.1.7"
pyyaml = "^6.0.1"
requests = "^2.31.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.2.0"
flake8 = "^7.0.0"
pyright = "^1.1.350"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
apitest = "apitest.main:cli"